--- a/gb/23/1/18/n13910123.md
+++ b/gb/23/1/18/n13910123.md
@@ -1,30 +1,30 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>腰围增一寸死亡多一分？局部消脂恐让人失望</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13910151-shutterstock_2142054351-600x400.jpeg" />
 <h6>内脏脂肪多的人，慢性病风险会增加。(fongbeerredhot/Shutterstock)
 </h6>
 <hr>
-<p>凸出的小腹、暗藏的脂肪会增加许多慢性病风险，外观“瘦”的人同样不可以轻忽。然而，一些强调“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%98%A6%E5%B0%8F%E8%85%B9.md#1">瘦小腹</a>”、消除<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%85%B9%E9%83%A8%E8%84%82%E8%82%AA.md#1">腹部脂肪</a>的方式，可能会让人失望。</p>
-<h2><span style="color: #188638;"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%85%E8%84%8F%E8%84%82%E8%82%AA.md#1">内脏脂肪</a>不容轻忽 健康体重也会骗人</span></h2>
-<p>人体的脂肪，分为皮下脂肪和<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%85%E8%84%8F%E8%84%82%E8%82%AA.md#1">内脏脂肪</a>。皮下脂肪在皮肤下，用手是可以捏起来的，而内脏脂肪是捏不起来的。</p>
-<p>内脏脂肪包括围绕着心、肺、肝，以及肠道等消化器官的脂肪组织，它约占体内所有脂肪的<ahref="https://www.healthdirect.gov.au/how-to-reduce-visceral-body-fat-hidden-fat" target="_blank" rel="noopener noreferrer">十分之一</a>。小腹凸出、苹果型身材的人，其多余的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%85%B9%E9%83%A8%E8%84%82%E8%82%AA.md#1">腹部脂肪</a>，只是内脏脂肪的冰山一角。<br />
+<p>凸出的小腹、暗藏的脂肪会增加许多慢性病风险，外观“瘦”的人同样不可以轻忽。然而，一些强调“瘦小腹”、消除腹部脂肪的方式，可能会让人失望。</p>
+<h2><span style="color: #188638;">内脏脂肪不容轻忽 健康体重也会骗人</span></h2>
+<p>人体的脂肪，分为皮下脂肪和内脏脂肪。皮下脂肪在皮肤下，用手是可以捏起来的，而内脏脂肪是捏不起来的。</p>
+<p>内脏脂肪包括围绕着心、肺、肝，以及肠道等消化器官的脂肪组织，它约占体内所有脂肪的<ahref="https://www.healthdirect.gov.au/how-to-reduce-visceral-body-fat-hidden-fat" target="_blank" rel="noopener noreferrer">十分之一</a>。小腹凸出、苹果型身材的人，其多余的腹部脂肪，只是内脏脂肪的冰山一角。<br />
 十分之一</p>
 <p>内脏脂肪本身是保护内脏的缓冲垫。但是，当人们摄取过多的热量，内脏脂肪增多并往腹部堆积，导致腹部肥胖，就会威胁健康。例如，代谢症候群、心血管疾病、胰岛素阻抗和2型糖尿病的风险升高。</p>
 <p>因为内脏脂肪可视为一种<ahref="https://www.health.harvard.edu/staying-healthy/abdominal-fat-and-what-to-do-about-it" target="_blank" rel="noopener noreferrer">内分泌器官</a>，它会分泌对健康产生深远影响的荷尔蒙和其它物质。过多的内脏脂肪，会破坏体内荷尔蒙的平衡和功能。</p>
-<p>内脏脂肪多寡，最容易观察的部位是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%85%B0%E5%9B%B4.md#1">腰围</a>。</p>
-<p>台湾卫生福利部的标准是，健康男性的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%85%B0%E5%9B%B4.md#1">腰围</a>应小于90公分（约35吋）、女性腰围应小于80公分（约31吋）。</p>
+<p>内脏脂肪多寡，最容易观察的部位是腰围。</p>
+<p>台湾卫生福利部的标准是，健康男性的腰围应小于90公分（约35吋）、女性腰围应小于80公分（约31吋）。</p>
 <p>美国<ahref="https://www.cdc.gov/healthyweight/assessing/index.md#1" target="_blank" rel="noopener noreferrer">疾病管制与预防中心</a>则是建议，男性的腰围不宜超过40吋（102公分），女性不要超过35吋（89公分）。</p>
 <p>但是，即使是看似瘦的人，只要腹部有多余的脂肪，也要面对这些风险。</p>
 <p>体重指数（BMI）是一种基于身高和体重的肥胖测量方法，通过体重（千克）除以身高（米）的平方而得出，本身没有直接测量身体脂肪。<ahref="https://www.cdc.gov/healthyweight/assessing/bmi/adult_bmi/index.md#1" target="_blank" rel="noopener noreferrer">健康体重</a>的BMI，介于18.5～24.9kg/m2之间。<ahref="https://www.heart.org/en/news/2021/04/22/too-much-belly-fat-even-for-people-with-a-healthy-bmi-raises-heart-risks" target="_blank" rel="noopener noreferrer">美国心脏协会</a>指出，BMI处于健康范围内，但腹部和内脏脂肪过多的人，同样会增加心脏病风险。同时，BMI属于肥胖，但腹部脂肪含量低的人，患心脏病的风险较低。</p>
 <p>英国一项大型<ahref="https://journals.sagepub.com/doi/pdf/10.1177/2047487313492631" target="_blank" rel="noopener noreferrer">研究</a>发现，无论在哪个BMI类别中（&lt;25、25～29.9、≥30 kg/m2），冠心病风险都会随着腰围的增加而上升。</p>
 <p>另一个现实是，当人们步入中年，脂肪占体重的<ahref="https://www.health.harvard.edu/staying-healthy/abdominal-fat-and-what-to-do-about-it" target="_blank" rel="noopener noreferrer">比例</a>往往会增加，额外的脂肪容易堆积在腹部周围。特别是<ahref="https://www.mayoclinic.org/zh-hans/healthy-lifestyle/womens-health/in-depth/belly-fat/art-20045809" target="_blank" rel="noopener noreferrer">绝经</a>后的女性，体内脂肪往往会朝腹部堆积。</p>
-<figure id="attachment_13910144" aria-describedby="caption-attachment-13910144" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13910144-shutterstock_1329579431.jpeg"><img class="size-large wp-image-13910144" src="https://i.epochtimes.com/assets/uploads/2023/01/id13910144-shutterstock_1329579431-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13910144" class="wp-caption-text">内脏脂肪包括围绕肝、消化器官的脂肪组织，过了中年后更容易累积在腹部。(Barks/Shutterstock)</figcaption></figure>
-<h2><span style="color: #188638;">内脏脂肪促百病 失智、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%99%8C%E7%97%87.md#1">癌症</a>都与它有关</span></h2>
+<figure id="attachment_13910144" aria-describedby="caption-attachment-13910144" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13910144-shutterstock_1329579431.jpeg"><img loading="lazy" decoding="async" class="size-large wp-image-13910144" src="https://i.epochtimes.com/assets/uploads/2023/01/id13910144-shutterstock_1329579431-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13910144" class="wp-caption-text">内脏脂肪包括围绕肝、消化器官的脂肪组织，过了中年后更容易累积在腹部。(Barks/Shutterstock)</figcaption></figure>
+<h2><span style="color: #188638;">内脏脂肪促百病 失智、癌症都与它有关</span></h2>
 <p>越来越多的研究发现，内脏脂肪与许多慢性病和死亡风险有关联，除心血管疾病、糖尿病，其它还有：</p>
 <p><strong>失智症：</strong>一项长达36年的<ahref="https://pubmed.ncbi.nlm.nih.gov/18367704/" target="_blank" rel="noopener noreferrer">研究</a>发现，那些中年时腹部肥胖程度最高的人，三十年后患失智症的风险，是腹部肥胖最少的人的近三倍。</p>
-<p><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%99%8C%E7%97%87.md#1">癌症</a>：</strong>越来越多的<ahref="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7730690/" target="_blank" rel="noopener noreferrer">研究</a>认为，内脏脂肪过多是食道癌、胰腺癌、大肠癌、乳癌、子宫内膜癌、肾癌和前列腺癌的重要危险因素。</p>
+<p><strong>癌症：</strong>越来越多的<ahref="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7730690/" target="_blank" rel="noopener noreferrer">研究</a>认为，内脏脂肪过多是食道癌、胰腺癌、大肠癌、乳癌、子宫内膜癌、肾癌和前列腺癌的重要危险因素。</p>
 <p><strong>早逝风险：</strong>《<ahref="https://www.bmj.com/company/newsroom/excess-belly-fat-linked-to-higher-risk-of-early-death-regardless-of-total-body-fat/" target="_blank" rel="noopener noreferrer">英国医学杂志</a>》曾发表一项研究，无论全身脂肪如何，内脏脂肪多与早逝风险较高有关。腰围每增加10公分，全因死亡风险增加11%。</p>
 <p><strong>肝病：</strong>内脏脂肪多可导致<ahref="https://pubmed.ncbi.nlm.nih.gov/28481662/" target="_blank" rel="noopener noreferrer">非酒精性脂肪肝</a>，若没有改善，可能慢慢进展到肝硬化、肝癌。</p>
 <p><strong>气喘：</strong>美国北加州癌症中心针对88,304名女性的<ahref="https://pubmed.ncbi.nlm.nih.gov/19706838/" target="_blank" rel="noopener noreferrer">研究</a>发现，体重超重的人和BMI正常的女性，腰围大于88公分会增加气喘风险。</p>
@@ -39,63 +39,52 @@
 <p>王思恒强调，重训无法针对腹部脂肪去消除，腹部脂肪完全是热量摄取太多而累积起来的。因此，运动很重要，但整体来说效果不佳，重点还是在于饮食控制。</p>
 <p>想想看，60公斤的人进行中等强度有氧运动一小时，消耗300~400大卡，仅跟一包薯条的热量差不多。一公斤脂肪约7700大卡，那么，又要做多久的运动呢？ 他建议别因为把运动当作减重工具而忽略饮食，因为结果一定会让人很失望。</p>
 <p>一项小型的研究也发现，只进行<ahref="https://eje.bioscientifica.com/view/journals/eje/160/5/759.xml" target="_blank" rel="noopener noreferrer">低热量饮食</a>对消除内脏脂肪的影响程度，比运动高。</p>
-<figure id="attachment_13869370" aria-describedby="caption-attachment-13869370" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13869370-162130.jpg"><img class="size-large wp-image-13869370" src="https://i.epochtimes.com/assets/uploads/2022/11/id13869370-162130-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13869370" class="wp-caption-text">要消除内脏脂肪，运动很重要，但重点还是在于饮食控制。（Shutterstock）</figcaption></figure>
+<figure id="attachment_13869370" aria-describedby="caption-attachment-13869370" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13869370-162130.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13869370" src="https://i.epochtimes.com/assets/uploads/2022/11/id13869370-162130-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13869370" class="wp-caption-text">要消除内脏脂肪，运动很重要，但重点还是在于饮食控制。（Shutterstock）</figcaption></figure>
 <p>台北享新代诊所营养师吕孟凡指出，减肥饮食目前最有实证的还是热量赤字，也就是吃进去的热量少于所消耗的热量。但她强调，“饮食和运动都没有办法局部减脂，只能全面性的减少体脂肪，但每个人会先减到哪个部位并不一定”。</p>
 <p>执行热量赤字的饮食时，先尽量减少精制糖的摄取，增加膳食纤维和优质蛋白质的份量。</p>
 <p>因为现代人普遍膳食纤维摄取不足，所以建议每天摄取2碗以上的蔬菜和1～2碗水果。主食部分尽量以“全谷杂粮”取代“精制淀粉”，全谷杂粮包括：糙米、燕麦、薏仁、红豆、绿豆、地瓜、玉米等等。优质蛋白质以豆类跟鱼类为优先，再来是鸡蛋，最后才是红肉类。</p>
 <p>吕孟凡表示，她遇过一些人为了减肥而害怕摄取油脂，但油脂也是必要的营养素。只要热量控制得当，选择单元或多元不饱和脂肪比例较高的油脂，就可以吃得很健康。她提醒，即使是好油或好的杂粮，吃太多也会胖，所以重点还是回到热量控制。</p>
 <p>王思恒补充，热量低容易肚子饿，要兼顾低热量和饱足感，最好摄取足够的蛋白质和纤维，及加工程度低的食物。如此一来，其它高热量的垃圾食物就吃不太下，整体热量摄取自然降低。◇</p>
-<p>身处纷乱之世，心存健康之道，就看<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">健康1+1</a></span></span>！</p>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/19920513/djy/blob/master/gb/22/3/9/n13634222.md#1" target="_blank" rel="noopener noreferrer">很多人蛋白质吃不足 这样吃才能增肌减脂</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/19920513/djy/blob/master/gb/22/10/15/n13846064.md#1" target="_blank" rel="noopener noreferrer">脂肪太多伤器官功能！吃这3种食物 饿死脂肪细胞</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/19920513/djy/blob/master/gb/22/8/27/n13811453.md#1" target="_blank" rel="noopener noreferrer">3大“健康习惯”让你胖 减肥成功有一关键</a></span></h3>
+<p>身处纷乱之世，心存健康之道，就看<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">健康1+1</a></span></span>！</p>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/3/9/n13634222.md#1" target="_blank" rel="noopener noreferrer">很多人蛋白质吃不足 这样吃才能增肌减脂</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/10/15/n13846064.md#1" target="_blank" rel="noopener noreferrer">脂肪太多伤器官功能！吃这3种食物 饿死脂肪细胞</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/8/27/n13811453.md#1" target="_blank" rel="noopener noreferrer">3大“健康习惯”让你胖 减肥成功有一关键</a></span></h3>
 <p>责任编辑：李清风</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893570.md#1">骨松、焦虑、记忆衰退？你可能是缺“镁”了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894407.md#1">缺乏维生素B12 出血性中风风险可能增加</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894622.md#1">日本肠胃病学专家：吃多面包恐伤身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895270.md#1">间歇性断食的九大好处和实行方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897557.md#1">蓝莓是天然血管清道夫 可有效预防心脏病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901565.md#1">断食可抗癌？三期结肠癌四个月竟痊愈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904131.md#1">摆脱孤独感 让精神和身体更健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906422.md#1">每天吃的沙拉油安全吗？一动作增癌症、失智风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926643.md#1">压力导致复胖 医师：要放松而非放纵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911063.md#1">姜汁柠檬水可暖身减肥 但一类人不适合</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/28/n13893570.md#1">骨松、焦虑、记忆衰退？你可能是缺“镁”了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/29/n13894407.md#1">缺乏维生素B12 出血性中风风险可能增加</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/29/n13894622.md#1">吃多面包恐伤身？医师：推荐地中海饮食吃法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/30/n13895270.md#1">间歇性断食的九大好处和实行方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/2/n13897557.md#1">蓝莓是天然血管清道夫 可有效预防心脏病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/7/n13901565.md#1">断食可抗癌？三期结肠癌四个月竟痊愈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/11/n13904131.md#1">摆脱孤独感 让精神和身体更健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/13/n13906422.md#1">每天吃的沙拉油安全吗？一动作增癌症、失智风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274781.md#1">吃对蛋白质轻松瘦！减肥要吃多少蛋白质？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267905.md#1">【健康1+1】内脏脂肪太多危害大 2茶饮减脂降三高</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10711194.md#1" target="_blank">“富田兵变”遭镇压 尸体填满整个山沟</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961143.md#1">清明不扫墓？ 古人在清明节从事什么活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13965136.md#1">【远见快评】乒乓国手爆丑闻 两高官同日传自杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964926.md#1">【全球新闻】不惧中共 麦卡锡将率两党议员见蔡英文</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962802.md#1">【百年真相】解密：为什么中共总是骂美国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964067.md#1">沈舟：美军透露可部署多少兵力应战中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959851.md#1">组图：美国最难进的20所大学 毕业后年薪高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964114.md#1">中共两名省部级高官同日死亡 传系堕楼轻生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963961.md#1">首度分享育儿日常 孙艺真自曝春天最忧心事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964562.md#1">1年痛失3至亲 大陆歌手刘维：户口本上只有我了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964701.md#1">机场劝架被吼“闭嘴” 秦岚高EQ举动获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964646.md#1">张艾嘉宣传电影一句话 泄露与周润发好交情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961054.md#1">有糖尿病也可放心吃！4种零食控血糖又解馋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959660.md#1">吃杏仁减重有4诀窍 还防糖尿病、心脏病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964375.md#1">你饭后经常胀气吗？ 哈佛医生教你如何缓解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964240.md#1">马斯克担忧 商业房地产引发债务危机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276161.md#1">【古道人生】商人只重利？义气干霄的商人在这里</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283716.md#1">【新闻大破解】启动无锚印钞？红朝末象总爆发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283950.md#1">【时事金扫描】中东新战争？真主党轰以色列</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283947.md#1">【新闻五人行】大陆金融女学霸轻生 全网痛议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283509.md#1">英国民宅天花板上藏18万只蜜蜂 7年没人知</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283104.md#1">逛Costco时五种令员工和购物者恼火的行为</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282430.md#1">郑爽未履行金额超1亿 剧集出品方股权被冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283097.md#1">世界小姐张梓琳晒带娃照 称8岁长女是苗条姐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273401.md#1">如何规划退休生活？简化生活 让身心受益</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282796.md#1">什么是“金钱畸形症”？ 如何应对？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280784.md#1">告别湿答答 内外除湿这样做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281348.md#1">日本北海道之旅 难忘的农庄餐馆</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/18/n13910123.htm">腰围增一寸死亡多一分？局部消脂恐让人失望</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/18/n13910123.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/1/18/n13910123.htm">腰围增一寸死亡多一分？局部消脂恐让人失望</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/18/n13910123.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
